--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-streamlit
-pytrends
-keybert
-scikit-learn
+streamlit==1.22.0
+pytrends==4.9.2
+keybert==0.7.0
+scikit-learn==1.2.2
+sentence-transformers==2.2.2
+torch==2.0.1
+transformers==4.30.1
